--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,7 +566,7 @@ button {
 
     .product__price{
         grid-column: span 1;
-        font-size:  var(--small-font);
+        font-size:  16px;
     }
     
     .cart{
