--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,6 +583,10 @@ span.cart__count--text2{
         display: none;
     }
 
+    .nav__link{
+        font-size: var(--small-font);
+    }
+
     .btn--cart{
         font-size: 1.3rem;
     }
@@ -649,6 +653,10 @@ span.cart__count--text2{
 
     .footer__text{
         font-size: .7rem;
+    }
+
+    .footer__social{
+        margin-bottom: -40px;
     }
 
 }
